# app-catalog-ui

./: .eslintrc  .gitignore  .gitreview  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  package.json  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
app_catalog/: __init__.py  dashboard.py  panel.py  urls.py  version.py  views.py
app_catalog/app_catalog/: urls.py  views.py
app_catalog/app_catalog/app_catalog/: index.html
app_catalog/app_catalog/component_catalog/: index.html
app_catalog/component_catalog/: urls.py  views.py
app_catalog/enabled/: _50_dashboard_applications.py  _51_app_catalog.py  _55_project_catalog_panel_group.py  _61_app_catalog_panel.py  _62_project_component_catalog_panel.py  _80_project_catalog_panel_group.py  _90_project_app_catalog_panel.py  _91_project_component_catalog_panel.py
app_catalog/local_settings.d/: _90_app_catalog_common.py
app_catalog/templates/app_catalog/: index.html
app_catalog/tests/: settings.py  test_app_catalog.py
app_catalog/tests/integration_tests/: horizon.conf
component_catalog/: panel.py  tests.py  urls.py  views.py
component_catalog/templates/component_catalog/: index.html
debian/: changelog  control  copyright  rules  watch
devstack/: README.rst  plugin.sh  settings
enabled/: _80_project_catalog_panel_group.py  _90_project_app_catalog_panel.py  _91_project_component_catalog_panel.py
releasenotes/source/: conf.py  index.rst
tools/gate/integration/: commons  post_test_hook.sh  pre_test_hook.sh
(+12 files in other folders)
