[metadata]
name = app-catalog-ui
description = 'OpenStack Application Catalog for OpenStack Dashboard',
author = OpenStack Foundation
author_email = openstack-dev@lists.openstack.org
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP
[files]
packages =
    app_catalog
    component_catalog
